add_token added to market-service
