# market-service/internal/controller/http/v1/request/save_user_token.go
@@ -1,0 +1,5 @@
+package request
+
+type SaveUserToken struct {
+	TinkoffToken string `json:"tinkoff_token" validate:"required"`
+}
