# market-service/internal/controller/http/v1/router.go
@@ -12,6 +12,8 @@ func NewMarketRoutes(apiV1Group fiber.Router, u usecase.Market, l logger.Interfa
 
 	strategyGroup := apiV1Group.Group("/strategy")
 	{
-		strategyGroup.Post("/", r.saveStrategy)
+		strategyGroup.Post("/add", r.saveStrategy)
+		strategyGroup.Post("/add_token", r.saveUserToken)
+
 	}
 }
